<resources>
    <string name="app_name">KvittoSkanner</string>
    <string name="menu_archive">Arkiv</string>
    <string name="menu_business">Företag</string>
    <string name="camera">Kamera</string>
    <string name="nextButtonText">Nästa</string>
    <string name="backButtonText">Bakåt</string>
    <string name="last_step_text">Bekräfta val</string>
    <string name="last_step_approve_button">Lägg till</string>
    <string name="cancel">Tillbaka</string>
    <string name="wizard_complete">Slutför</string>
    <string name="date_hint">Datum</string>
    <string name="default_company">Default Company</string>
    <string name="cant_delete_employee">"Hoppsan! Du kan inte radera företagets enda anställde. Inget har raderats"</string>
    <string name="cant_delete_card">"Hoppsan! Du har inga sparade kort. Inget har raderats."</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_supplier">Grossist</string>
    <string name="total">Total:</string>
    <string name="currency">Sek</string>
    <string name="copy_image_text">Kopierar bild...</string>
    <string name="gallery">Galleri</string>
    <string name="reading_image">Skannar kvitto...</string>
    <string name="sort">Sortera</string>
    <string name="filter">Filtrera</string>
    <string name="archive_title">Arkiv</string>
    <string name="sort_up">Pris stigande</string>
    <string name="sort_down">Pris sjunkande</string>
    <string name="show_category">Visa kategori</string>
    <string name="show_transport">Transport</string>
    <string name="show_hotel">Hotell</string>
    <string name="show_officeSupplies">Kontorsmaterial</string>
    <string name="show_food">Mat</string>
    <string name="show_postage">Porto</string>
    <string name="show_representation">Representation</string>
    <string name="show_travel">Resor</string>
    <string name="show_propellant">Bensin</string>
    <string name="sort_by_date">Sortera på datum</string>
    <string name="sort_by_date_descending">Sortera nyast först</string>
    <string name="sort_by_date_accending">Sortera äldst först</string>

    <string name="show_all">Visa alla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="archive_save">Sparat</string>
    <string name="action_remove">Ta bort</string>
    <string name="action_share">Dela</string>
    <string name="intro_welcome">Välkommen till KvittoSkanner!</string>
    <string name="intro_welcometext">Med denna applikation kan du på ett enkelt sätt kan bokföra dina kvitton.</string>
    <string name="intro_archive">Arkiv</string>
    <string name="intro_archivetext">Under arkiv kan du hantera alla dina kvitton.
        Du kan sortera dem efter pris och datum. Du har möjlighet att lägga till ett nytt kvitto, redigera ett befintligt eller radera ett kvitto helt. </string>
    <string name="intro_company">Företag</string>
    <string name="intro_companytext">Under företag kan du hantera alla dina företag. Du kan lägga till ett nytt företag,
        redigera ett befintligt eller radera ett företag helt. Du har även möjlighet att se hur många kvitton som finns lagrade i företaget.
        Du måste alltid ha minst ett företag.</string>
    <string name="intro_supplier">Grossister</string>
    <string name="intro_suppliertext">Under grossister kan du hantera alla dina grossister. Du kan lägga till en ny grossist, redigera en befintlig eller radera en grossist helt.</string>
    <string name="intro_add">Lägg till</string>
    <string name="intro_addtext">För att lägga till något nytt nyttjar du den runda lägg-till knappen som finns på samtliga tre sidor.</string>
    <string name="intro_goodluck">Lycka till med bokföringen!</string>
    <string name="intro_goodlucktext">Vi hoppas att du spara många timmar med hjälp av vår app!</string>

    <string name="no_image">Ingen bild</string>
    <string name="receipt_saved">Kvitto sparat</string>
    <string name="default_supplier">Default Supplier</string>
    <string name="main_controller_type_name">Skriv namn: </string>
    <string name="main_controller_edit">Redigera </string>
    <string name="main_controller_save">Spara </string>
    <string name="main_controller_change_to">Ändrat till </string>
    <string name="main_controller_cancel">Avbryt </string>
    <string name="fab_controller_create_new">Skapa ny</string>
    <string name="fab_controller_add_supplier">Lagt till ny grossist</string>
    <string name="show_companies">Visa företag</string>
    <string name="show_employees">Visa anställda</string>
    <string name="changes_saved">Dina ändringar har sparats</string>
    <string name="invalid_input">Ogiltig inmatning</string>
    <string name="create_new_card">Var god lägg till kort</string>

    <string name="text_supplier">Grossist</string>
    <string name="text_company">Företag</string>
    <string name="text_card">Kort</string>
    <string name="text_employee">Anställd</string>
    <string name="text_created">Skapat</string>
    <string name="text_not_saved">Kunde inte spara</string>
    <string name="specific_cant_remove_company">Du kan inte radera alla företag, ett måste alltid finnas kvar</string>
    <string name="employee_name">Skriv den anställdes namn:</string>
    <string name="card_number">Skriv sista 4 siffrorna på företagskortet:</string>
    <string name="edit">Editera</string>
    <string name="exit">Avbryt</string>
    <string name="no_supplier">INGEN GROSSIST</string>
    <string name="no_card">Inget kort</string>
    <string name="card_removed">Kort borttaget</string>
    <string name="employee_removed">Anställd borttagen</string>


</resources>
