<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_price_up"
                android:title="@string/sort_up"/>
            <item
                android:id="@+id/action_sort_price_down"
                android:title="@string/sort_down"/>
        </menu>
    </item>


    <item
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/show_all"
                android:title="@string/show_all"/>
            <item
                android:title="@string/show_category">
                <menu>
                    <item
                        android:id="@+id/show_transport"
                        android:title="@string/transport"/>
                </menu>
            </item>
        </menu>
    </item>

</menu>