<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/list_item_archive_circular_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/list_item_archive_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="80dp"
        android:text="@string/default_company"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/list_item_archive_circular_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/list_item_archive_string_total"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/list_item_archive_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="599.9"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/list_item_archive_string_currency"
        android:layout_marginRight="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/list_item_archive_string_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_marginRight="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/list_item_archive_total"
        app:layout_constraintRight_toLeftOf="@id/list_item_archive_total"/>

    <ImageView
        android:id="@+id/list_item_archive_comment_image"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/ic_comment"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/list_item_archive_string_currency" />

    <TextView
        android:id="@+id/list_item_archive_string_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/currency"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/list_item_archive_total" />

    <TextView
        android:id="@+id/list_item_archive_num_of_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:text="1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_archive_comment_image"
        app:layout_constraintLeft_toLeftOf="@+id/list_item_archive_comment_image" />

</android.support.constraint.ConstraintLayout>